add hard of hearing res

--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
         </p>
 
         <!-- <input type="button" class="button-1" onclick="window.location.href='workshop.html';" value="workshops"> -->
-        <a href="workshop.html" class="button-1">Workshops and Commissions</a>
+        <a href="workshop.html" class="button-1">Workshops</a>
+        <a href="https://ko-fi.com/annreflection/commissions" class="button-1">Small commissions</a>
+
   </div>
 </body>
 
 <footer>
   <div class="flex-container2">
-    <div class="flex-item-left"><pre background color = grey >                         Annreflection creates lanterns, chinese brush ink painting, performs disablity dance and offers workshops. </pre>
+    <div class="flex-item-left"><p background color = grey >                         Annreflection creates lanterns, chinese brush ink painting, performs disablity dance and offers workshops. </pre>
           </div>
-    <div class="flex-item-right"><pre background color = grey >                         All rights reserved Ann K Chou (annreflection) </pre>
+    <div class="flex-item-right"><p background color = grey >                         All rights reserved Ann K Chou (annreflection) </pre>
          </div>
       <!-- <div class="ft-main-item">
             <pre background color = grey >Annreflection creates lanterns, chinese brush ink painting, performs disablity dance and offers workshops. </pre>
