--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Ann K. Chou – Artist & Accessibility Advocate</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style_resp.css">
 <style>
@@ -44,8 +45,71 @@
 <body>
   <div class=main>
     <div style="padding-left:40px">
-      <h2>Bio as Artist</h2>
-          <p>
+      <<h1 class="site-title">Ann K. Chou</h1>
+      <p class="subtitle fade-in">
+        Lantern-maker. Access designer. Storyteller of systems and light.<br />
+      </p>
+      <p class="subtitle fade-in">
+        I create inclusive, sensory experiences for public spaces—where art, care, and community meet.
+      </p>
+  <!-- Key Projects -->
+  <section id="featured-projects">
+    <h2>Key Artistic Projects</h2>
+    <div class="project-grid">
+      <div class="project">
+      /*  <img src="lantern.jpg" alt="Lantern Installation at BC Culture Days" />*/
+        <h3>Lantern Installation Series</h3>
+        <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
+      </div>
+      <div class="project">
+      /*  <img src="screendance.jpg" alt="Screendance Performance" />*/
+        <h3>Eco-Illuminessence and Spoon Screendance Performance</h3>
+        <p>Exploring the interplay between visual art, movement, and shadow.</p>
+      </div>
+      <div class="project">
+      /*  <img src="workshop.jpg" alt="Community Workshop" />*/
+        <h3>Lantern-making, Sock Pocket and Shoebox Stage for Accessiblity Inclusion Resilence Workshop Series as BC Culture Days Ambassador /h3>
+        <p>Fostering critical hope, intergenerational and intercultural dialogue through hands-on, accessible art-making.</p>
+      </div>
+    </div>
+  </section>
+  <!-- Dual-Track -->
+  <section id="dual-track">
+    <h2>Art Meets Service Design</h2>
+    <p>Ann’s practice bridges participatory art, inclusive technology, and healthcare experience—creating access across systems and surfaces.</p>
+   /* <a href="dual-track-bio.html" class="button">Learn More</a>*/
+  </section>
+  <!-- AI & Service Design -->
+  <section id="ai-service-design">
+    <h2>AI & Service Design Portfolio</h2>
+    <div class="project-grid">
+      <div class="project">
+       /* <img src="ai-for-good.jpg" alt="AI for Good Project" />*/
+        <h3>AI for Good Internship</h3>
+        <p>Applied inclusive AI solutions to healthcare access and digital storytelling.</p>
+      </div>
+      <div class="project">
+       /* <img src="patient-record.jpg" alt="Patient Record" /> */
+        <h3>Draw-Aloud: Reimagining Health Records</h3>
+        <p>Co-designing patient experiences through visual storytelling and accessibility mapping.</p>
+      </div>
+      <div class="project">
+      /*  <img src="service-design.jpg" alt="Service Design" /> */
+        <h3>Inclusive Service Systems</h3>
+        <p>Human-centered design approaches to accessibility and equity in care.</p>
+      </div>
+    </div>
+   /* <a href="portfolio-service.html" class="button secondary">See More in Portfolio</a>*/
+  </section>
+  <!-- Workshops -->
+  <section id="workshops">
+    <h2>Workshops & Community Engagement</h2>
+    <p>Ann leads inclusive, adaptive workshops using light, paper, and play to foster creative dialogue across communities.</p>
+   /* <a href="workshops.html" class="button">See Upcoming Workshops</a> */
+  </section>
+  <section id="about">
+          <h2>About Ann as an artist </h2>
+    <p>
         Ann K Chou (she/her) is a multi-talent light-oriented visual installation artist,
         who is mostly fond of spontaneous brush works, in both Chinese calligraphy ink and acrylics.
         Ann has come from a relative quiet intersectionality -- deaf first-generation immigrant from Hong Kong.
@@ -59,11 +123,18 @@
         found materials and objects in gardens and recycling bins, translucent fabric, clear plastics,
          mesh, bamboos and grape vines.
         </p>
+  </section>
+          <!-- Connect -->
+  <section id="connect">
+    <h2>Let’s Connect</h2>
+    <p>Interested in a storefront collaboration, community project, or exhibition proposal? Reach out anytime.</p>
+    <a href="contact.html" class="button">Get in Touch</a>
 
         <!-- <input type="button" class="button-1" onclick="window.location.href='workshop.html';" value="workshops"> -->
         <a href="workshop.html" class="button-1">Workshops</a>
         <a href="https://ko-fi.com/annreflection/commissions" class="button-1">Small commissions</a>
 
+      </section>
   </div>
 </body>
 
