--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     <section id="connect">
       <h2>Let’s Collaborate</h2>
       <p>Interested in a storefront activation, co-created workshop, or arts residency? Let’s build it together.</p>
+    <div class="button-group">
       <a href="contact.html" class="cta glow">Contact Me</a>
       <a href="workshops.html" class="button glow-ink">Workshops</a>
       <a href="https://ko-fi.com/annreflection/commissions" class="button-ghost glow-green">Commissions</a>
+    </div>
     </section>
   </main>
 
