--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="featured-projects">
       <h2>Key Artistic Projects</h2>
-      <div class="project-grid">
+      <div class="project-grid clearfix">
         <div class="project">
           <h3>Lantern Installation Series</h3>
           <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
