--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
         </div>
       </div>
     </section>
+    
+    <section id="dual-track">
+      <h2>Art Meets Service Design</h2>
+      <p>This section will showcase my Master’s thesis and how artistic practice intersects with inclusive service design.</p>
+      <!-- Add content or visuals here -->
+    </section>
 
+    <section id="ai-portfolio">
+      <h2>AI & Service Design Portfolio</h2>
+      <div class="project-grid">
+        <!-- Add new project cards here -->
+      </div>
+    </section>
+    
     <section id="about">
       <h2>About Ann</h2>
       <p>Ann K Chou (she/her) is a multidisciplinary visual artist working with light, movement, and accessibility. She is a Deaf first-generation immigrant from Hong Kong whose practice celebrates broken objects, spontaneous collaboration, and joyful inclusion.</p>
