--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
         </div>
       </div>
     </section>
+
+    <section id="about">
+      <h2>About Ann</h2>
+      <p>Ann K Chou (she/her) is a multidisciplinary visual artist and researcher working with light, movement, and accessibility. She is a Deaf first-generation immigrant from Hong Kong whose practice celebrates broken objects, spontaneous collaboration, and joyful inclusion.</p>
+      <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
+      <p>Her preferred materials range from found objects and translucent fabrics to bamboo, garden clippings, and recycled plastics.</p>
+    </section>
     
     <section id="dual-track">
       <h2>Art Meets Service Design</h2>
@@ -81,12 +88,7 @@
       </div>
     </section>
     
-    <section id="about">
-      <h2>About Ann</h2>
-      <p>Ann K Chou (she/her) is a multidisciplinary visual artist working with light, movement, and accessibility. She is a Deaf first-generation immigrant from Hong Kong whose practice celebrates broken objects, spontaneous collaboration, and joyful inclusion.</p>
-      <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
-      <p>Her preferred materials range from found objects and translucent fabrics to bamboo, garden clippings, and recycled plastics.</p>
-    </section>
+
 
     <section id="connect">
       <h2>Let’s Collaborate</h2>
