--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 
   <main class="main" style="padding: 2rem">
     <h1 class="site-title">Ann K. Chou</h1>
-    <p class="subtitle fade-in">
-      Visual installation artist, lantern-maker, and access designer.<br />
+    <p class="highlight-subtitle fade-in">
+      Visual installation artist, lantern-maker, and access designer.<br /> 
+    </p>
+    <p>
       I create inclusive, sensory-based environments that spark improvised reflection and community connection.
     </p>
     <p class="subtitle fade-in">
