--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p class="highlight-subtitle fade-in">
       Visual installation artist, lantern-maker, and access designer.<br /> 
     </p>
-    <p>
+    <p class="subtitle fade-in">
       I create inclusive, sensory-based environments that spark improvised reflection and community connection.
     </p>
     <p class="subtitle fade-in">
