--- a/index0.html
+++ b/index0.html
@@ -57,7 +57,7 @@
     <h2>Key Artistic Projects</h2>
     <div class="project-grid">
       <div class="project">
-      /*  <img src="lantern.jpg" alt="Lantern Installation at BC Culture Days" />*/
+      /*  <img src="rss\WaterRabbitTrop_storytelling.jpg" alt="Lantern Installation at BC Culture Days" />*/
         <h3>Lantern Installation Series</h3>
         <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
       </div>
