--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="project">
           <h3>Lantern Installation Series</h3>
           <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
+          <img src="rss\WaterRabbitTrop_storytelling.jpg" alt="Three illuminated rabbit sculptures with umbrellas sit beneath trees at night during rain. They are handmade with sumi-e brushwork and eco-friendly materials for the 2023 Renfrew Ravine Moon Festival." />
           <a href="contact.html" class="cta glow">Get in Touch</a>
         </div>
         <div class="project">
