--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
         <div class="project">
           <h3>Lantern Installation Series</h3>
           <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
-          <img src="rss\WaterRabbitTrop_storytelling.jpg" alt="Three illuminated rabbit sculptures with umbrellas sit beneath trees at night during rain. They are handmade with sumi-e brushwork and eco-friendly materials for the 2023 Renfrew Ravine Moon Festival." />
+          <figure style="margin-top: 1rem;">
+            <img src="rss/WaterRabbitTrop_storytelling.jpg" alt="Three illuminated rabbit sculptures with umbrellas sit beneath trees at night during rain. They are handmade with sumi-e brushwork and eco-friendly materials for the 2023 Renfrew Ravine Moon Festival." style="max-width: 100%; border-radius: 8px;" />
+            <figcaption style="font-size: 0.9rem; color: #666; margin-top: 0.5rem;">
+              “Storytelling Water Rabbits Trio” illuminated at the 2023 Renfrew Ravine Streamside Moon Festival.
+            </figcaption>
+          </figure>
           <a href="contact.html" class="cta glow">Get in Touch</a>
         </div>
         <div class="project">
