--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
-      <a href="#workshops">Workshops 🎨</a>
+      <!-- <a href="#workshops">Workshops 🎨</a> -->
+      <a href="Eco-illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -67,7 +68,8 @@
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
           <p>Exploring the interplay between visual art, movement, and shadow in green public spaces.</p>
-          <a href="portfolio.html" class="button-ghost glow-green">See Performance</a>
+          <a href="Eco-illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project </a>
+          <!-- <a href="portfolio.html" class="button-ghost glow-green">See Performance</a>   -->
         </div>
         <div class="project">
           <h3>Sumi-e & Shoebox Stages</h3>
