--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
           <p>Exploring the interplay between visual art, movement, and shadow in green public spaces.</p>
-          <a href="Eco-illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project </a>
+          <a href="Eco-illum.html" class="button-ghost glow-ink">Explore Eco-Illuminessence🌘 </a>
           <!-- <a href="portfolio.html" class="button-ghost glow-green">See Performance</a>   -->
         </div>
         <div class="project">
