--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </a>
       <a class="active" href="#home">Home 🏠</a>
       <!-- <a href="#workshops">Workshops 🎨</a> -->
-      <a href="Eco-illum.html" class="eco-link">Eco-Illum 🌘</a>
+      <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -68,7 +68,7 @@
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
           <p>Exploring the interplay between visual art, movement, and shadow in green public spaces.</p>
-          <a href="Eco-illum.html" class="button-ghost glow-ink">Explore Eco-Illuminessence🌘 </a>
+          <a href="Eco_illum.html" class="button-ghost glow-ink">Explore Eco-Illuminessence🌘 </a>
           <!-- <a href="portfolio.html" class="button-ghost glow-green">See Performance</a>   -->
         </div>
         <div class="project">
