--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -15,7 +15,8 @@
         <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
-      <a href="#workshops">Workshops 🎨</a>
+      <!-- <a href="#workshops">Workshops 🎨</a> -->
+      <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
