--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -24,11 +24,12 @@
     </div>
   </header>
 
-  <div class="scroll-container">
-    <img src="rss/ann-reflection-try-it-yourself-table-exhibition-at-market_1692696342.webp" alt="Try-it-yourself table" />
-    <img src="rss/AnnKChou1-Peacock Lantern  - made with broken umbrella  and pop bottle.jpg" alt="Peacock Lantern" />
-    <img src="rss/AnnKChou3-Shadow-movement dance with lit banner painted by me.jpg" alt="Shadow Movement Dance" />
-  </div>
+<div class="scroll-container">
+  <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime lantern dragon at Government House" />
+  <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern near Science World dome" />
+  <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
+</div>
+
 
   <div class="icon-bar">
     <a href="https://www.instagram.com/annreflection/" class="instagram"><i class="fa fa-instagram"></i></a>
