--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -100,6 +100,36 @@
     <p>Cut-outs, sumi-e ink paintings, and marked transparencies shift between motion and stillness. They form a layered visual poem of natural elements and quiet reflection—accessible without sound or language.</p>
   </section>
 
+<section id="eco-gallery">
+  <h2>🔍 Explore the Installation Up Close</h2>
+  <p style="max-width: 800px;">A collection of behind-the-scenes moments, outdoor activations, and lantern close-ups from the Eco-Illuminessence process. Click any image to view it larger.</p>
+
+  <div class="lightbox-gallery">
+    <a href="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime dragon lantern installation at Government House" />
+    </a>
+    <a href="rss-eco/AnnChou_eco2_owl_scienceworld.png" target="_blank">
+      <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern perched near Science World" />
+    </a>
+    <a href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e scrolls suspended for performance shadows" />
+    </a>
+    <a href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Backlit sumi-e in Clark Park" />
+    </a>
+    <a href="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Rabbit Mother lantern in red light" />
+    </a>
+    <a href="rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" alt="Dragonboat paddle lantern in red shadows" />
+    </a>
+    <a href="rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" target="_blank">
+      <img src="rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" alt="Quan the fish lantern and mini lantern rack" />
+    </a>
+  </div>
+</section>
+
+    
 </main>
 
  <footer>
