--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -103,33 +103,27 @@
   </section>
 
 <section id="eco-gallery">
-  <h2>🔍 Explore the Installation Up Close</h2>
-  <p style="max-width: 800px;">A collection of behind-the-scenes moments, outdoor activations, and lantern close-ups from the Eco-Illuminessence process. Click any image to view it larger.</p>
+  <h2>🔍 Explore the Activation & Installation Up Close</h2>
+    <p style="max-width: 800px;">A collection of behind-the-scenes moments, outdoor activations, and lantern close-ups from the Eco-Illuminessence process. Click any image to view it larger.</p>
+    <p style="max-width: 800px;">Click an image to open it in a gallery overlay. Use ← or → to view more.</p>
 
   <div class="lightbox-gallery">
-    <a href="rss/rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime dragon lantern installation at Government House" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" data-caption="Lantern dragon at Government House">
+      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Lantern dragon at Government House" />
     </a>
-    <a href="rss/rss-eco/AnnChou_eco2_owl_scienceworld.png" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern perched near Science World" />
+
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World">
+      <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern outside Science World" />
     </a>
-    <a href="rss/rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e scrolls suspended for performance shadows" />
+
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Early sumi-e performance on rod">
+      <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Early sumi-e performance on rod" />
     </a>
-    <a href="rss/rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Backlit sumi-e in Clark Park" />
-    </a>
-    <a href="rss/rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Rabbit Mother lantern in red light" />
-    </a>
-    <a href="rss/rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" alt="Dragonboat paddle lantern in red shadows" />
-    </a>
-    <a href="rss/rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" target="_blank">
-      <img src="rss/rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" alt="Quan the fish lantern and mini lantern rack" />
-    </a>
+
+    <!-- Add more images the same way -->
   </div>
 </section>
+
 
     
 </main>
