--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -103,24 +103,51 @@
   </section>
 
 <section id="eco-gallery">
-  <h2>🔍 Explore the Activation & Installation Up Close</h2>
-    <p style="max-width: 800px;">A collection of behind-the-scenes moments, outdoor activations, and lantern close-ups from the Eco-Illuminessence process. Click any image to view it larger.</p>
-    <p style="max-width: 800px;">Click an image to open it in a gallery overlay. Use ← or → to view more.</p>
+  <h2>🔍 Explore the Installation Up Close</h2>
+  <p style="max-width: 800px;">
+    Click a tag below to explore selected glimpses from Eco-Illum’s creative evolution.
+  </p>
 
+  <!-- 🔘 Filter buttons -->
+  <div class="filter-buttons">
+    <button class="filter-btn active" data-filter="all">🌌 Show All</button>
+    <button class="filter-btn" data-filter="sensing">🧠 Sensing Walks</button>
+    <button class="filter-btn" data-filter="preview">🌘 Previews</button>
+    <button class="filter-btn" data-filter="sculptural">🎭 Sculptural Feedback</button>
+  </div>
+
+  <!-- 🖼️ Filterable Gallery -->
   <div class="lightbox-gallery">
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" data-caption="Lantern dragon at Government House">
-      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Lantern dragon at Government House" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World" class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
     </a>
-
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World">
-      <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern outside Science World" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World" class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern in Science World" />
     </a>
-
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Early sumi-e performance on rod">
-      <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Early sumi-e performance on rod" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Sumi-e rod experiment" class="gallery-item sensing preview">
+      <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e rod experiment" />
     </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" data-caption="Dragon + Owl at Trout Lake" class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl lanterns" />
+    </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" data-caption="Backlit sumi-e pilot" class="gallery-item preview">
+      <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Backlit sumi-e test" />
+    </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco6_Sumi-eAsLanternPuppet.jpg" data-caption="Sumi-e as lantern puppet" class="gallery-item sculptural">
+      <img src="rss-eco/AnnChou_eco6_Sumi-eAsLanternPuppet.jpg" alt="Sumi-e puppet form" />
+    </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" data-caption="Rabbit in red shadow" class="gallery-item preview">
+      <img src="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Rabbit lantern in red" />
+    </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" data-caption="Paddle lantern preview" class="gallery-item preview">
+      <img src="rss-eco/AnnChou_eco8_Paddle_Dragonboat_inRedShadow.jpg" alt="Dragon paddle lantern" />
+    </a>
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" data-caption="Quan and lantern textures" class="gallery-item sculptural">
+      <img src="rss-eco/AnnChou_eco9_Quanfish_n_mini_rack_w_texture_shadow.jpg" alt="Quan fish and lantern rack" />
+    </a>
+  </div>
+</section>
 
-    <!-- Add more images the same way -->
   </div>
 </section>
 
