--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -187,7 +187,27 @@
   });
 </script>
 
-  
+  <script>
+  const filterButtons = document.querySelectorAll('.filter-btn');
+  const galleryItems = document.querySelectorAll('.gallery-item');
+
+  filterButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      document.querySelector('.filter-btn.active')?.classList.remove('active');
+      btn.classList.add('active');
+      const filter = btn.getAttribute('data-filter');
+
+      galleryItems.forEach(item => {
+        if (filter === 'all' || item.classList.contains(filter)) {
+          item.style.display = 'block';
+        } else {
+          item.style.display = 'none';
+        }
+      });
+    });
+  });
+</script>
+
   
   <button id="toggle-dark" class="button-ghost" style="position: fixed; bottom: 80px; left: 20px; z-index: 1001;">
   🌜 Dark Mode
