--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -27,7 +27,7 @@
   </header>
 
 <div class="scroll-container">
-  <img src="rss/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime lantern dragon at Government House" />
+  <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime lantern dragon at Government House" />
   <img src="rss/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern near Science World dome" />
   <img src="rss/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
 </div>
@@ -118,7 +118,7 @@
 
   <!-- 🖼️ Filterable Gallery -->
   <div class="lightbox-gallery">
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World" class="gallery-item sensing">
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" data-caption="Feminist Dragon Boat lantern resting by the pool of Governor House" class="gallery-item sensing">
       <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
     </a>
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World" class="gallery-item sensing">
@@ -127,8 +127,8 @@
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Sumi-e rod experiment" class="gallery-item sensing preview">
       <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e rod experiment" />
     </a>
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" data-caption="Dragon + Owl at Trout Lake" class="gallery-item sensing">
-      <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl lanterns" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_TroutLake.png" data-caption="Dragon + Owl at Trout Lake" class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_TroutLake.png" alt="Dragon and owl lanterns" />
     </a>
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" data-caption="Backlit sumi-e pilot" class="gallery-item preview">
       <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Backlit sumi-e test" />
