--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -27,8 +27,8 @@
   </header>
 
 <div class="scroll-container">
-  <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Daytime lantern dragon at Government House" />
-  <img src="rss/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern near Science World dome" />
+  <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
+  <img src="rss-eco/AnnChou_eco10_pilot_closer_backlit_effect_of_sumi-e_in_clr_pk" alt="" />
   <img src="rss/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
 </div>
 
@@ -131,7 +131,7 @@
       <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_TroutLake.png" alt="Dragon and owl lanterns" />
     </a>
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" data-caption="Backlit sumi-e pilot" class="gallery-item preview">
-      <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Backlit sumi-e test" />
+      <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Pilot backlit test of sumi-e as curtain - and ink-brush reinspired back to 3d mini-lantern puppet" />
     </a>
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco6_Sumi-eAsLanternPuppet.jpg" data-caption="Sumi-e as lantern puppet" class="gallery-item sculptural">
       <img src="rss-eco/AnnChou_eco6_Sumi-eAsLanternPuppet.jpg" alt="Sumi-e puppet form" />
