--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -119,7 +119,7 @@
   <!-- 🖼️ Filterable Gallery -->
   <div class="lightbox-gallery">
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" data-caption="Feminist Dragon Boat lantern resting by the pool of Governor House" class="gallery-item sensing">
-      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
+      <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
     </a>
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco2_owl_scienceworld.png" data-caption="Owl lantern outside Science World" class="gallery-item sensing">
       <img src="rss-eco/AnnChou_eco2_owl_scienceworld.png" alt="Owl lantern in Science World" />
@@ -127,9 +127,14 @@
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Sumi-e rod experiment" class="gallery-item sensing preview">
       <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e rod experiment" />
     </a>
-    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_TroutLake.png" data-caption="Dragon + Owl at Trout Lake" class="gallery-item sensing">
-      <img src="rss-eco/AnnChou_eco4_draytrip_dragon_owl_duo_TroutLake.png" alt="Dragon and owl lanterns" />
+    <a data-fancybox="eco-gallery"
+       href="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png"
+       data-caption="Dragon + Owl at Trout Lake"
+       class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png"
+           alt="Dragon and owl lanterns at Trout Lake" />
     </a>
+
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" data-caption="Backlit sumi-e pilot" class="gallery-item preview">
       <img src="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" alt="Pilot backlit test of sumi-e as curtain - and ink-brush reinspired back to 3d mini-lantern puppet" />
     </a>
