--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -127,12 +127,8 @@
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" data-caption="Sumi-e rod experiment" class="gallery-item sensing preview">
       <img src="rss-eco/AnnChou_eco3_initial-explore-sumi-e-on-rod-as-perf.jpg" alt="Sumi-e rod experiment" />
     </a>
-    <a data-fancybox="eco-gallery"
-       href="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png"
-       data-caption="Dragon + Owl at Trout Lake"
-       class="gallery-item sensing">
-      <img src="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png"
-           alt="Dragon and owl lanterns at Trout Lake" />
+    <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png" data-caption="Dragon + Owl at Trout Lake" class="gallery-item sensing">
+      <img src="rss-eco/AnnChou_eco4_daytrip_dragon_owl_duo_TroutLake.png" alt="Dragon and owl lanterns at Trout Lake" />
     </a>
 
     <a data-fancybox="eco-gallery" href="rss-eco/AnnChou_eco5_pilot_backlit_effect_of_sumi-e_in_clr_pk.jpg" data-caption="Backlit sumi-e pilot" class="gallery-item preview">
