--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -62,7 +62,7 @@
     <h2>✦ A Sensory Crossing: The Performative Layer</h2>
     <p>In performance, the fabric lantern sculptures became puppet-characters—animated not through traditional puppetry, but through <strong>light manipulation, shadow play, and direct interaction</strong>. The artist used handheld lights and live cameras to mobilize the shadows of these forms, transforming static objects into living silhouettes.</p>
     <p>A live camera pointed at a flat, illuminated surface allowed the artist to paint directly with sumi-e ink. This surface functioned as both a projection canvas and a performance space. The live feed was projected onto surrounding surfaces, creating a layered visual field. Participants were invited to co-create scenes through movement, layering, and light.</p>
-    <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.</p>
+    <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.</p>.jpg
   </section>
 
   <section>
